// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages should add data to the tree 1`] = `
Object {
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 2`] = `
Object {
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "requiredRoles": Array [
            "Support",
          ],
          "trigger": "!test",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 3`] = `
Object {
  "bot-development": Object {
    "!otherTrigger": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "event": "MESSAGE",
          "requiredRoles": Array [
            "Developer",
          ],
          "trigger": "!otherTrigger",
        },
      },
    ],
  },
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "requiredRoles": Array [
            "Support",
          ],
          "trigger": "!test",
        },
      },
    ],
  },
  "bot-test-channel": Object {
    "!otherTrigger": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "event": "MESSAGE",
          "requiredRoles": Array [
            "Developer",
          ],
          "trigger": "!otherTrigger",
        },
      },
    ],
  },
  "channel": Object {},
}
`;
